name:                anapo
version:             0.1.0.0
homepage:            https://github.com/bitonic/anapo#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- synopsis:
-- description:

library
  hs-source-dirs:      src
  exposed-modules:
    Anapo
    Anapo.ClientM
    Anapo.VDOM
    Anapo.Component
    Anapo.Loop
    Anapo.Render
  build-depends:
    base >= 4.7 && < 5,
    unordered-containers,
    text,
    lens,
    ghcjs-dom,
    containers,
    mtl,
    dlist,
    time,
    stm,
    ghcjs-base
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TemplateHaskell
    TupleSections
    TypeFamilies
    NamedFieldPuns

executable test-app
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
    base,
    anapo,
    text,
    lens,
    containers,
    ghcjs-dom,
    async,
    time,
    mtl,
    ghcjs-base,
    aeson,
    vector,
    bytestring,
    safe-exceptions
  other-modules:
    Anapo.TestApps
    Anapo.TestApps.Prelude
    Anapo.TestApps.TodoList
    Anapo.TestApps.Timer
    Anapo.TestApps.YouTube
    Anapo.TestApps.SlowRequest
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TemplateHaskell
    TupleSections
    TypeFamilies
    NamedFieldPuns
    StandaloneDeriving

source-repository head
  type:     git
  location: https://github.com/bitonic/anapo
