name:                hs-vdom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bitonic/hs-vdom#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
    base >= 4.7 && < 5,
    unordered-containers,
    uuid,
    text,
    lens,
    ghcjs-dom,
    containers,
    mtl,
    transformers
    -- jsaddle-warp
  default-language:    Haskell2010
  ghc-options: -Wall

executable test-app
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
    base,
    hs-vdom
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitonic/hs-vdom
