name:                anapo-blaze
version:             0.1.0.0
homepage:            https://github.com/bitonic/anapo#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2019
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- synopsis:
-- description:

library
  hs-source-dirs:      src
  exposed-modules:
    Anapo.Blaze
  build-depends:
    base >= 4.7 && < 5,
    anapo,
    blaze-builder,
    text,
    unliftio-core,
    unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TupleSections
    TypeFamilies
    NamedFieldPuns

source-repository head
  type:     git
  location: https://github.com/bitonic/anapo
