name:                anapo-test-app
version:             0.1.0.0
homepage:            https://github.com/bitonic/anapo#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- synopsis:
-- description:

executable test-app
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
    aeson,
    anapo,
    base,
    bytestring,
    containers,
    ghcjs-dom,
    hashable,
    jsaddle,
    lens,
    safe-exceptions,
    text,
    time,
    mtl,
    vector,
    unliftio-core
  if !impl(ghcjs)
    build-depends:
      jsaddle-warp
  else
    build-depends:
      ghcjs-base
  other-modules:
    Anapo.TestApps
    Anapo.TestApps.Prelude
    Anapo.TestApps.TodoList
    Anapo.TestApps.Timer
    Anapo.TestApps.YouTube
    Anapo.TestApps.YouTubeBindings
    -- Anapo.TestApps.SlowRequest
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TemplateHaskell
    TupleSections
    TypeFamilies
    NamedFieldPuns
    StandaloneDeriving
    TypeApplications

source-repository head
  type:     git
  location: https://github.com/bitonic/anapo
