name:                anapo
version:             0.1.0.0
homepage:            https://github.com/bitonic/anapo#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- synopsis:
-- description:

library
  hs-source-dirs:      src
  exposed-modules:
    Anapo
    Anapo.VDOM
    Anapo.Component
    Anapo.Loop
    Anapo.Render
    Anapo.Text
    Anapo.Logging
    Anapo.CollectedThread
  other-modules:
    Anapo.Component.Internal
    Anapo.OrderedHashMap
  build-depends:
    base >= 4.7 && < 5,
    async,
    dlist,
    ghcjs-dom,
    hashable,
    lens,
    safe-exceptions,
    time,
    mtl,
    unliftio-core,
    unordered-containers,
    vector
  if !impl(ghcjs)
    build-depends:
      text,
      jsaddle
  else
    build-depends:
      ghcjs-base,
      aeson
    js-sources: jsbits/fnv.js
  default-language: Haskell2010
  ghc-options: -Wall
  -- DO NOT put TemplateHaskell here, currently it triggers -dynamic-too
  -- which in turns makes everything recompile every time. I am not
  -- entirely sure why.
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TupleSections
    TypeFamilies
    NamedFieldPuns

source-repository head
  type:     git
  location: https://github.com/bitonic/anapo
