name:                anapo
version:             0.1.0.0
homepage:            https://github.com/bitonic/anapo#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- synopsis:
-- description:

flag bundle-vdom
  description: Whether to link the VDOM JavaScript code directly. If you use JSaddle you probably do not want to do it and instead include the vdom.js file provided yourself.
  default: True

library
  hs-source-dirs:      src
  exposed-modules:
    Anapo
    Anapo.JsVDOM
    Anapo.Component
    Anapo.Loop
    Anapo.Text
    Anapo.Logging
    Anapo.CollectedThread
    Anapo.Debug
  other-modules:
    Anapo.JsComponent.Internal
    Anapo.Component.Elements
    Anapo.Component.Attributes
    Anapo.Component.Events
  build-depends:
    base >= 4.7 && < 5,
    async,
    dlist,
    ghcjs-dom,
    hashable,
    lens,
    safe-exceptions,
    time,
    mtl,
    unliftio-core,
    unordered-containers,
    vector,
    jsaddle,
    ghc-prim
  if !impl(ghcjs)
    build-depends:
      text
  else
    build-depends:
      ghcjs-base,
      deepseq
    js-sources:
      jsbits/fnv.js
    if flag(bundle-vdom)
      js-sources:
        ts/vdom.js
  default-language: Haskell2010
  ghc-options: -Wall
  -- DO NOT put TemplateHaskell here, currently it triggers -dynamic-too
  -- which in turns makes everything recompile every time. I am not
  -- entirely sure why.
  default-extensions:
    BangPatterns
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StaticPointers
    StrictData
    TupleSections
    TypeFamilies
    NamedFieldPuns
  data-files:
    ts/vdom.js

source-repository head
  type:     git
  location: https://github.com/bitonic/anapo
